--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.8.1",
   "dependencies": {
+    "@netlify/api": "^14.0.3",
     "@netlify/functions": "^4.1.10",
-    "@octokit/rest": "^22.0.0",
     "jsonwebtoken": "^9.0.2",
     "octokit": "^5.0.3"
   },
